--- a/index.html
+++ b/index.html
@@ -4,8 +4,33 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <style>
+      .page {
+        width: 400px;
+        margin: 20px auto;
+      }
+      ul li {
+        padding: 10px;
+      }
+    </style>
   </head>
   <body>
-    <h1>Task Two 5/28</h1>
+    <div class="page">
+      <h1>Task Two 5/28</h1>
+      <ul>
+        <li>Task 1</li>
+        <ul>
+          <li><a href="./CSS-Tasks/task-1.html">Part 1</a></li>
+          <li><a href="./CSS-Tasks/task-2.html">Part 2</a></li>
+          <li><a href="./CSS-Tasks/task-3.html">Part 3</a></li>
+        </ul>
+        <li>Task 2</li>
+        <ul>
+          <li><a href="./CSS-Tasks/task-4.html">Part 1</a></li>
+          <li><a href="./CSS-Tasks/task-5.html">Part 2</a></li>
+          <li><a href="./CSS-Tasks/task-6.html">Part 3</a></li>
+        </ul>
+      </ul>
+    </div>
   </body>
 </html>
